--- a/styles.scss/_collection.scss
+++ b/styles.scss/_collection.scss
@@ -1,11 +1,7 @@
 #collection {
-    // flex: 1;
-    // display: flex;
-    // flex-direction: column;
 
     &-header {
-        padding-bottom: 20px;
-        border-bottom: 1px solid rgb(233, 233, 233);
+        padding-bottom: 10px;
         color: rgb(150, 150, 150);
 
         @media (min-width: 768px) {
