--- a/styles.scss/_home.scss
+++ b/styles.scss/_home.scss
@@ -1,37 +1,36 @@
 #home {
-    padding: 90px 10px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 
     &-content {
-        flex: 1;
         display: flex;
         flex-direction: column;
-        position: relative;
+        // position: relative;
+        padding: 80px 10px;
 
         .success-message {
+            position: absolute;
+            top: 80px;
+            left: 50%;
+            width: 100%;
+            transform: translateX(-50%);
             visibility: hidden;
             opacity: 0;
             transition: all 0.3s ease-in-out;
-            position: absolute;
-            top: 50px;
-            left: 50%;
-            transform: translateX(-50%);
             min-height: 200px;
             min-width: 200px;
             background-color: white;
             padding: 20px;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 0 999px rgba(0, 0, 0, 0.2);
 
-            display: flex;
+            display: none;
             flex-direction: column;
             justify-content: space-between;
+            gap: 20px;
 
             &-text {
-                flex: 1;
-                border-bottom: 1px solid #e5e5e5;
                 line-height: 1.5em;
             }
 
